# HFTools

./: .gitignore  A DAL that is both templated and compatible with a polymorphic base class.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Catalog_Template_Generator.MD  DB Support for PostgreSQL.MD  HFTools.sln  HFTools_ORM - gemini.docx  HFTools_ORM.MD  HFTools_ORM_Test.MD  INSTALL.vcxproj  INSTALL.vcxproj.filters  Integration_With_Both_DBSupport.MD  PreparedStatements_Transaction_Support.MD  README.md  UNIT_TEST_For_Entity.MD  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a DAL that is both templated and compatible with a polymorphic base class.docx  hftools.vcxproj  hftools.vcxproj.filters  hftools_app.vcxproj  hftools_app.vcxproj.filters
_codeql_build_dir/: hftools_app
data/: fxinstruments.json  schema_postgresql.sql  schema_sybase.sql  trades.json  users.json
include/hftools/database/: Connection.h  IDatabase.h  PostgreSQLDatabase.h  ResultSet.h  SybaseDatabase.h
include/hftools/model/: FXInstrument.h  HFTools_ORM.h  ORM_v1 - last OK.h  ORM_v1.h  Sample_Entity.h  Trade.h  User.h
src/: main.cpp
src/database/: Connection.cpp  IDatabase.cpp  PostgreSQLDatabase.cpp  ResultSet.cpp  SybaseDatabase.cpp
src/model/: FXInstrument.cpp  Trade.cpp  User.cpp
